# itretail_automation

./: .gitignore  Cargo.toml  labels.xlsx  scale.xlsx  tbc-upc-assist-tampermonkey.txt
.cargo/: config.toml
src/: main.rs
src/assets/: backdrop.xcf
src/internal/: api.rs  cas.rs  customer.rs  label.rs  localexpress.rs  loyalty.rs  mod.rs  settings.rs  sidedb.rs  square.rs  stripe.rs  tasmota.rs  tvmenu.rs
tasks/: Customer Sync.xml  Inventory.xml  LE Orders Lights.xml  Labels.xml  Loyalty.xml  Scales.xml  Sync DB.xml  TV Menu.xml
