[package]
name = "itretail_automation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
chrono = "0.4.24"
clap = "4.2.7"
cty = "0.2.2"
fancy-regex = "0.11.0"
home = "0.5.5"
image = "0.24.6"
imageproc = "0.23.0"
itertools = "0.11.0"
lazy_static = "1.4.0"
libloading = "0.8.0"
log = "0.4.19"
process_path = "0.1.4"
regex = "1.8.1"
reqwest = { version = "0.11.17", features = ["json", "blocking", "multipart"] }
rust_xlsxwriter = "0.38.0"
rusttype = "0.9.3"
serde = { version = "1.0.160", features = ["derive"] }
serde_derive = "1.0.160"
serde_json = "1.0.96"
simplelog = { version = "0.12.1", features = ["termcolor"] }
