[package]
name = "itretail_automation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
chrono = "0.4.24"
clap = "4.2.7"
config = "0.13.3"
cookie = { version = "0.18.0", features = ["percent-encode"] }
exitcode = "1.1.2"
fancy-regex = "0.11.0"
home = "0.5.5"
htmlentity = "1.3.2"
image = "0.24.6"
imageproc = "0.23.0"
itertools = "0.11.0"
lazy_static = "1.4.0"
libloading = "0.8.0"
log = "0.4.19"
postgres = { version = "0.19.7", features = ["with-chrono-0_4", "with-uuid-1"] }
process_path = "0.1.4"
regex = "1.8.1"
reqwest = { version = "0.11.17", features = ["json", "blocking", "multipart", "cookies"] }
rust_decimal = { version = "1.34.3", features = ["db-postgres"] }
rust_decimal_macros = "1.34.2"
rust_xlsxwriter = "0.38.0"
rusttype = "0.9.3"
serde = { version = "1.0.160", features = ["derive"] }
serde_derive = "1.0.160"
serde_json = "1.0.96"
simplelog = { version = "0.12.1", features = ["termcolor"] }
squareup = { git = "https://github.com/postwait/squareup.git", branch = "BatchChangeInventoryRequest-type" }
tokio = { version = "1.39.2", features = [ "macros", "rt-multi-thread" ] }
tokio-postgres = { version = "0.7.11", features = ["with-chrono-0_4", "with-uuid-1"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
